--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ python-pptx==0.6.23
 Flask==3.0.0
 Werkzeug==3.0.1
 pytest==7.4.3
-pytest-cov==4.1.0gunicorn==21.2.0
+pytest-cov==4.1.0
+gunicorn==21.2.0
